--- a/references.bib
+++ b/references.bib
@@ -302,3 +302,14 @@ year = {2010}
  acmid = {1859911},
  publisher = {JMLR.org},
 }
+
+@Book{DougLotu:03,
+ author =    "Dougherty, Edward R. and Lotufo, Roberto A.",
+ title =     "Hands-on Morphological Image Processing",
+ publisher = "SPIE Press",
+ year =      2003,
+ isbn =      "0-8194-4720-X",
+ address =   "Bellingham, WA",
+ psnote =    "SPIE Vol. N. TT59, 290 PP., Softcover, List Price: USD 56.00"
+}
+
