--- a/references.bib
+++ b/references.bib
@@ -313,3 +313,16 @@ year = {2010}
  psnote =    "SPIE Vol. N. TT59, 290 PP., Softcover, List Price: USD 56.00"
 }
 
+
+@ARTICLE{Cython,
+author={Behnel, S. and Bradshaw, R. and Citro, C. and Dalcin, L. and Seljebotn, D.S. and Smith, K.},
+journal={Computing in Science Engineering}, title={Cython: The Best of Both Worlds},
+year={2011},
+month={march-april },
+volume={13},
+number={2},
+pages={31 -39},
+keywords={Cython language;Fortran code;Python language extension;numerical loops;programming language;C language;numerical analysis;},
+doi={10.1109/MCSE.2010.118},
+ISSN={1521-9615},
+}
