--- a/references.bib
+++ b/references.bib
@@ -326,3 +326,18 @@ keywords={Cython language;Fortran code;Python language extension;numerical loops
 doi={10.1109/MCSE.2010.118},
 ISSN={1521-9615},
 }
+
+@incollection {springerlink:10.1007/978-0-387-45524-2_47,
+   author = {Zhao, Ting and Murphy, Robert F.},
+   affiliation = {Carnegie Mellon University, Pittsburgh, Pennsylvania 15213},
+   title = {Automated Interpretation of Subcellular Location Patterns from Three-Dimensional Confocal Microscopy},
+   booktitle = {Handbook Of Biological Confocal Microscopy},
+   editor = {Pawley, James B.},
+   publisher = {Springer US},
+   isbn = {978-0-387-45524-2},
+   keyword = {Biomedical and Life Sciences},
+   pages = {818-828},
+   url = {http://dx.doi.org/10.1007/978-0-387-45524-2_47},
+   note = {10.1007/978-0-387-45524-2_47},
+   year = {2006}
+}
