BIB Fix _ in bibtex file

--- a/references.bib
+++ b/references.bib
@@ -337,7 +337,6 @@ ISSN={1521-9615},
    isbn = {978-0-387-45524-2},
    keyword = {Biomedical and Life Sciences},
    pages = {818-828},
-   url = {http://dx.doi.org/10.1007/978-0-387-45524-2_47},
-   note = {10.1007/978-0-387-45524-2_47},
+   doi = {10.1007/978-0-387-45524-2_47},
    year = {2006}
 }
