--- a/paper.tex
+++ b/paper.tex
@@ -327,19 +327,22 @@ and compute the minimum of this operation.
 \toprule
 Operation & mahotas & pymorph & scikits-image & OpenCV\\
 \midrule
-erode       &     12.2 &     14.4 &     41.9 &      0.4 & \\
-dilate      &     13.4 &      9.0 &     39.4 &      0.4 & \\
-open        &     25.6 &     23.4 &     81.3 &       NA & \\
+erode       &     10.3 &     14.2 &     41.5 &      0.4 & \\
+dilate      &     12.7 &      8.9 &     38.9 &      0.4 & \\
+open        &     23.0 &     23.3 &     80.8 &       NA & \\
 center mass &      7.1 &       NA &       NA &       NA & \\
-sobel       &     81.9 &       NA &    106.5 &      6.2 & \\
-cwatershed  &    194.8 &  56928.5 &    288.9 &     42.9 & \\
-daubechies  &     20.7 &       NA &       NA &       NA & \\
-haralick    &    326.9 &       NA &   7497.4 &       NA & \\
+sobel       &     75.4 &       NA &    105.4 &      6.2 & \\
+cwatershed  &    191.3 &  60410.0 &    285.0 &     42.1 & \\
+daubechies  &     20.3 &       NA &       NA &       NA & \\
+haralick    &    304.5 &       NA &   7615.8 &       NA & \\
 \bottomrule
 \end{tabular}
 \caption{Efficiency Results for mahotas, pymorph, scikits-image, and openCV
 (through Python wrappers). Shown are values as multiples of the time that
-\code{numpy.max(f)} takes.}
+\code{numpy.max(image)} takes to compute the maximum pixel value in the image
+(all operations are over the same image). For scikits-image, features on the
+grey-scale cooccurrence matrix were used instead of Haralick features, which it
+does not support.}
 \label{tab:efficiency}
 \end{table}
 
@@ -361,7 +364,9 @@ OpenCV is the fastest library, but this comes at the cost of some flexibility.
 Arguments to its functions must be of the exact expected type and it is
 possible to crash the interpreter if types do match the expected type (in the
 other libraries, all types are checked and an exception is generated which can
-be caught by user code). This is particularly relevant for interactive use.
+be caught by user code). This is particularly relevant for interactive use as
+the user is often exploring and is willing to pay the cost of a few extra type
+conversions to avoid a hard-crash.
 
 Among the other libraries, mahotas is the fastest, except when comparing simple
 morphological operations with pymorph. Pymorph intelligently uses arithmetic
