BIB Add first names

--- a/references.bib
+++ b/references.bib
@@ -46,7 +46,7 @@ year = {2009}
 }
 
 @ARTICLE{numpystructure,
-author={van der Walt, S. and Colbert, S.C. and Varoquaux, G.},
+author={van der Walt, Stéfan and Colbert, S.C. and Varoquaux, Gaël},
 journal={Computing in Science Engineering}, title={The NumPy Array: A Structure for Efficient Numerical Computation},
 year={2011},
 month={march-april },
