MIN Make sure 'van der Walt' is correct

--- a/paper.tex
+++ b/paper.tex
@@ -5,6 +5,7 @@
 \usepackage{python}
 \usepackage[%
     natbib=true,%
+    useprefix=true,
     backend=biber,%
     backref=true,%
     citestyle=authoryear-comp,%
