MIN Fit affiliations in one line

--- a/paper.tex
+++ b/paper.tex
@@ -28,8 +28,8 @@
 
 \title{Mahotas: Open source software for scriptable computer vision}
 \author{Luis Pedro Coelho\\
-Lane Center for Computational Biology, Carnegie Mellon University, Pittsburgh, USA\\
-Instituto de Medicina Molecular, Lisboa, Portugal}
+Lane Center for Computational Biology, Carnegie Mellon University\\
+Instituto de Medicina Molecular}
 
 \begin{document}
 \maketitle
