TXT The missing patch-submitter

--- a/paper.tex
+++ b/paper.tex
@@ -423,7 +423,8 @@ Molecular Biology Laboratory), Davis King (Northrop Grumman ES), Robert Webb
 (Carnegie Mellon University), Matthew Goodman (University of Texas at Austin),
 K.-Michael Aye (University of Bern), Rita Sim\~{o}es (University of Twente),
 Joe Kington (University of Wisconsin), Christoph Gohlke (University of
-California, Irvine), and Sandro Knauss (University of Bremen).
+California, Irvine), Lukas Bossard (ETH Zurich), and Sandro Knauss (University
+of Bremen).
 
 \subsubsection{Software location}
 
