--- a/references.bib
+++ b/references.bib
@@ -149,7 +149,7 @@ keywords = "Interface compiler"
 
 @article{omerosearcher,
 author={Cho, Baek Hwan and Cao-Berg, Ivan and Bakal, Jennifer Ann and Murphy, Robert F},
-title={OMERO.searcher: content-based image search for microscope images},
+title={OMERO.\-searcher: content-based image search for microscope images},
 journal={Nature Methods},
 year = {2012},
 month = jul,
