--- a/references.bib
+++ b/references.bib
@@ -123,7 +123,7 @@ volume = "19",
 number = "5",
 pages = "599 - 609",
 year = "2003",
-note = "<ce:title>Tools for Program Development and Analysis. Best papers from two Technical Sessions, at ICCS2001, San Francisco, CA, USA, and ICCS2002, Amsterdam, The Netherlands</ce:title>",
+note = "Tools for Program Development and Analysis. Best papers from two Technical Sessions, at ICCS2001, San Francisco, CA, USA, and ICCS2002, Amsterdam, The Netherlands",
 issn = "0167-739X",
 doi = "10.1016/S0167-739X(02)00171-1",
 url = "http://www.sciencedirect.com/science/article/pii/S0167739X02001711",
